# browns_performance_science_fellowship

./: .gitattributes  .gitignore  README.md  WORK_LOG.md  pyproject.toml
config/: browns_tracking.yaml
docs/: project_setup_and_plan.md
docs/deliverables/: tracking_analysis_deliverable.pptx  ~$tracking_analysis_deliverable.pptx
docs/deliverables/archive/: tracking_analysis_deliverable.pptx
docs/deliverables/final/: tracking_analysis_deliverable.pptx
notebooks/: 00_self_contained_analysis.ipynb  01_tracking_analysis.ipynb  01_tracking_analysis_template.ipynb  02_coach_slide_ready_template.ipynb
notebooks/archive/: 00_self_contained_analysis.ipynb  01_tracking_analysis_template.executed.ipynb  01_tracking_analysis_template.ipynb  02_coach_slide_ready_template.executed.ipynb  02_coach_slide_ready_template.ipynb
scripts/: build_notebook.py  build_powerpoint.py  build_presentation_notebook.py  debug_notebook_integrity.py  rebuild_pptx_from_nb01.py  render_presentation_assets.py  render_visual_templates.py  validate_submission.py
src/: analysis_pipeline.py
src/browns_tracking/: __init__.py  cli.py  config.py  constants.py  metrics.py  pipeline.py  presentation.py  presets.py  results_contract.py  segmentation.py  visuals.py
tests/: test_config_paths.py  test_conversions.py  test_debug_notebook_integrity.py  test_metrics_and_segmentation.py  test_notebook_integrity.py  test_presets_and_presentation.py
